# talkyard

./: .env  .gitignore  .gitmodules  .yarnclean  CLA-v1.txt  CONTRIBUTING.adoc  COPYRIGHT.txt  Gruntfile.coffee  Gruntfile.js  LICENSE-BUSLv11.txt  Makefile  README  README.md  Vagrantfile  a  activator  bower.json  build.sbt  cr.txt  decisions-wip.adoc  decisions.adoc  deploy-11danny.sh  docker-compose-no-limits.yml  docker-compose.it.yml  docker-compose.yml  docker-import-dev-database.sh  docker-stack.yml  docker-start-dev-database.sh  docker-start-dev-gulp.sh  docker-start-dev-server.sh  doing-cr-anons-assign-see-adrs.tx  doing-undoing-true-id.txt  doing.txt  e2e-tests.txt  flake.nix  grunt.js  gulpfile.js  hmm.txt  html.scala  index.html.unused  (+33 more)
app/: Global.scala  com
client/: banner-pending.js  banner.js  ext-iframe.js  reactjs-types.ts  right-to-left-props.styl  server-side-type-stubs.ts  types-and-const-enums.d.ts  types-and-const-enums.ts
conf/: app-dev.conf  app-prod.conf  application-logger.xml  application.conf  debiki-assets-softlink.conf  debiki-core.conf  dev-test.conf  local  logback-prod.xml  logback.xml  logger.xml  nodejs-brunch-config-prod.ls  nodejs-brunch-config.ls  override.conf  play.plugins  prod-dump@192.168.0.123.conf  prod-logger.xml  prod-tunnel.conf  prod.conf  routes  securesocial.conf  (+2 more)
conf-client/: jsTestDriver-scenario.conf  jsTestDriver.conf  jstd-scenario-adapter-config.js  nodejs-brunch-config-prod.ls  nodejs-brunch-config.ls
d/: c  (+4 more)
images/maint/: .gitignore  Cargo.toml  Dockerfile  maint-msg.html
images/maint/src/: main.rs
(+4300 files in other folders)
